[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/ship/EnginePlume.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ship/Ship_Rijay_Mockingbird.gd" type="Script" id=2]
[ext_resource path="res://sprites/ships/Rijay/Mockingbird/c1.png" type="Texture" id=3]
[ext_resource path="res://sprites/ships/Rijay/Mockingbird/c2_shaded.png" type="Texture" id=4]
[ext_resource path="res://sprites/ships/Rijay/Mockingbird/c2.png" type="Texture" id=5]
[ext_resource path="res://sprites/ships/Rijay/Mockingbird/c1_shaded.png" type="Texture" id=6]
[ext_resource path="res://sprites/ships/Rijay/Mockingbird/fixed_color.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 20.7196 )

[node name="Ship_Rijay_Mockingbird" type="Area2D"]
z_index = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
default_primary_color = Color( 0, 0.580392, 1, 1 )

[node name="Color1Shaded" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="Color1" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="Color2Shaded" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )

[node name="Color2" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )

[node name="ConstantColor" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="EngineP" parent="." instance=ExtResource( 1 )]
position = Vector2( -6, 20 )

[node name="EngineS" parent="." instance=ExtResource( 1 )]
position = Vector2( 6, 20 )

[node name="EngineC" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 20 )
anim_name = "plume_large"

[node name="ManuSA" parent="." instance=ExtResource( 1 )]
position = Vector2( 8, 4 )
rotation = -1.5708
anim_name = "plume_tiny"

[node name="ManuSF" parent="." instance=ExtResource( 1 )]
position = Vector2( 7.94344, -7.05656 )
rotation = -1.5708
anim_name = "plume_tiny"

[node name="ManuPF" parent="." instance=ExtResource( 1 )]
position = Vector2( -7, -8 )
rotation = 1.5708
anim_name = "plume_tiny"

[node name="ManuPA" parent="." instance=ExtResource( 1 )]
position = Vector2( -7, 3 )
rotation = 1.5708
anim_name = "plume_tiny"

[node name="ManuAP" parent="." instance=ExtResource( 1 )]
position = Vector2( -3, 18 )
anim_name = "plume_tiny"

[node name="ManuAS" parent="." instance=ExtResource( 1 )]
position = Vector2( 3, 18 )
anim_name = "plume_tiny"

[node name="ManuFP" parent="." instance=ExtResource( 1 )]
position = Vector2( -2, -13 )
rotation = 3.14159
anim_name = "plume_tiny"

[node name="ManuFS" parent="." instance=ExtResource( 1 )]
position = Vector2( 4, -13 )
rotation = 3.14159
anim_name = "plume_tiny"
